--- a/nginx-playbook.yaml
+++ b/nginx-playbook.yaml
@@ -2,14 +2,14 @@
 - name: Deploy Docker container
   hosts: ansible_client
   # become: true
-  vars:
-    jenkins_build_number: "{{ jenkins_build_number | default('latest') }}"
-    docker_image_name: aks0207/ansible-nginx
-    docker_image_tag: "{{ jenkins_build_number }}"
+  # vars:
+  #   jenkins_build_number: "{{ jenkins_build_number | default('latest') }}"
+  #   docker_image_name: aks0207/ansible-nginx
+  #   docker_image_tag: "{{ jenkins_build_number }}"
   tasks:
   - name: pull an image
     docker_image:
-      name: "{{ docker_image_name }}:{{ docker_image_tag }}"
+      name: aks0207/ansible-nginx:"{{ jenkins_build_number }}"
       source: pull
   - name: Create volume
     docker_volume:
@@ -18,7 +18,7 @@
   - name: Run nginx Docker container
     docker_container:
       name: nginx
-      image: "{{ docker_image_name }}:{{ docker_image_tag }}"
+      image: aks0207/ansible-nginx:"{{ jenkins_build_number }}"
       state: started
       ports:
         - "8000:80"
